--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "@fortawesome/fontawesome-free": "^6.4.2",
     "@urql/svelte": "^4.0.4",
     "bulma": "^0.9.4",
+    "diff-match-patch": "^1.0.5",
     "socket.io-client": "^4.7.2",
     "svelte-forms": "^2.3.1"
   }
